convert to maven project

--- a/ms-server/pom.xml
+++ b/ms-server/pom.xml
@@ -23,8 +23,8 @@
 
     <dependencies>
         <dependency>
-            <groupId>org.springframework</groupId>
-            <artifactId>spring-core</artifactId>
+            <groupId>commons-io</groupId>
+            <artifactId>commons-io</artifactId>
         </dependency>
         <dependency>
             <groupId>cn.hutool</groupId>
